pkl-core/src/test/files/LanguageSnippetTests/input/errors/propertyNotFound1.pkl
foo {
  xbar = 1
  barx = 2
  other = 3
}

res1 = foo.bar